# simple-files-backup

./: .gitignore  Cargo.toml  Makefile  README.md  config.json
.github/: dependabot.yml
.github/actions/setup-cargo/: action.yml
.github/workflows/: cleanup-caches.yml  code-validation.yml  dependabot-auto-merge.yml  packages-validation.yml  release.yml  upload-binaries.yml
benches/: my_benchmark.rs
configs/git/hooks/: pre-commit  pre-push
src/: main.rs
src/modules/: backup.rs  config.rs  constants.rs  files.rs  helpers.rs  logs.rs  mod.rs  structs.rs  threads.rs  traverse.rs  types.rs
src/modules/configs/: constants.rs
src/modules/utils/: config.rs  dirs.rs  files.rs  logs.rs  mod.rs  threads.rs
tests/: backup.rs  bin.rs  config.rs  helpers.rs  mod.rs  stubs.rs
