[package]
name = "simple-files-backup"
description = "Simple files backup tool written on Rust"
authors = ["Arthur Hovhannisyan <arthurhovhannisyan31@gmail.com>"]
repository = "https://github.com/arthurhovhannisyan31/simple-files-backup"
version = "1.0.0"
edition = "2024"
license = "MIT"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

[profile.release]
lto = true
opt-level = 3
