[package]
name = "simple-files-backup"
description = "Simple files backup tool written on Rust"
authors = ["Arthur Hovhannisyan <arthurhovhannisyan31@gmail.com>"]
repository = "https://github.com/arthurhovhannisyan31/simple-files-backup"
version = "1.0.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
predicates = "3.1.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
criterion = "0.7.0"

[profile.release]
lto = true
opt-level = 3

[[bench]]
name = "my_benchmark"
harness = false
