[package]
name = "simple-files-backup"
description = "Simple files backup tool written on Rust"
authors = ["Arthur Hovhannisyan <arthurhovhannisyan31@gmail.com>"]
repository = "https://github.com/arthurhovhannisyan31/simple-files-backup"
version = "1.0.0"
edition = "2024"
license = "MIT"
rust-version = "1.87.0"

[dependencies]
anyhow = "1.0.102"
assert_cmd = "2.2.0"
assert_fs = "1.1.3"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
predicates = "3.1.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.2"

[profile.release]
lto = true
opt-level = 3

[[bench]]
name = "my_benchmark"
harness = false
